# audio-to-text

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: load_balancer.py  main.py
src/api/v1/endpoint/: transcribe.py
src/core/: config.py
src/schema/: transcribe_schema.py
src/services/: audio_splitter.py  file_service.py  metrics_service.py  whisper_service.py
