[project]
name = "audio-to-text"
version = "0.1.0"
description = "Local audio-to-text transcription using Whisper Large V3 on GPU"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.18",
    "transformers>=4.46.0",
    "torch>=2.2.0",
    "accelerate>=0.34.0",
    "jinja2>=3.1.0",
    "aiofiles>=24.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = ["ruff", "pytest", "httpx"]

[tool.ruff]
line-length = 120
target-version = "py310"
