[project]
name = "audio-to-text"
version = "0.2.0"
description = "Local audio-to-text transcription using faster-whisper (CTranslate2) on GPU"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.18",
    "faster-whisper>=1.1.0",
    "torch>=2.2.0",
    "httpx>=0.27.0",
    "aiofiles>=24.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sse-starlette>=2.0.0",
]

[project.optional-dependencies]
dev = ["ruff", "pytest", "httpx"]

[tool.ruff]
line-length = 120
target-version = "py310"
